# smart-learning-box

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4
UI/: Dialog_WifiConnecting.html  Dialog_WifiPassword.html  Math_Adventure_2048.html  Screen_AI.html  Screen_Achievement.html  Screen_GameCenter.html  Screen_Home.html  Screen_OCR.html  Screen_Wifi.html
assets/: game_database.json  game_metadata.json
assets/eez/: README.md
assets/scripts/: build_game_db.py  classify_games.py  gen_fonts.sh  gen_metadata.py  manage_c6_fw.sh  override_metadata.py  rescan_full.py  rom_inventory.csv  scan_rom.py
components/esp_lcd_jd9165/: esp_lcd_jd9165.c
components/esp_lcd_jd9165/include/: esp_lcd_jd9165.h
docs/: BUILD_STATUS.md  NES_EMULATOR_PLAN.md  PNG_ICON_PLAN.md  PROJECT_NES_INTEGRATION_REPORT.md  TF_CARD_FONT_PLAN.md  UI_DESIGN_SYSTEM.md  esp_lvgl_adapter_integration.md  rom_report.md  rom_scan_report.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  system_init.c  system_init.h
main/app/achievement/: achievement.c  achievement.h  achievement_ui.c  achievement_ui.h
main/app/ai/: ai.c  ai.h  ai_llm.c  ai_llm.h  ai_llm_parser.c  ai_llm_parser.h  ai_ui.c  ai_ui.h
main/app/boot/: boot_ui.c  boot_ui.h
main/app/cache/: answer_cache.c  answer_cache.h
main/app/font_loader/: font_loader.c  font_loader.h  used_chars.txt
main/app/game_center/: game_center.c  game_center.h  game_center_ui.c  game_center_ui.h
main/app/game_center/game2048/: game2048.c  game2048.h  game2048_ui.c  game2048_ui.h
main/app/game_center/game_db/: game_db.c  game_db.h
main/app/game_center/math_quiz/: math_quiz.c  math_quiz.h  math_quiz_ui.c  math_quiz_ui.h
main/app/game_center/more_games/: more_games.c  more_games.h
main/app/game_center/nes_sel/: nes_category_ui.c  nes_category_ui.h  nes_game_list_ui.c  nes_game_list_ui.h
main/app/game_center/word_king/: word_king.c  word_king.h  word_king_ui.c  word_king_ui.h
main/app/home/: home.c  home.h  home_ui.c  home_ui.h
main/app/icon_loader/: icon_loader.c  icon_loader.h
main/app/nes_emu/: nes_emu.c  nes_emu.h  nes_emu_ui.c  nes_emu_ui.h  nes_render.c  nes_render.h  rom_loader.c  rom_loader.h  save_manager.c  save_manager.h  virtual_gamepad.c  virtual_gamepad.h
main/app/nes_emu/core/: gui.h  intro.h  libsnss.c  log.h  memguard.h  mmc5_snd.c  mmc5_snd.h  nes.c  nes.h  nes_apu.h  nofrendo_stubs.c  nofrendo_stubs.h  noftypes.h  vrcvisnd.c  vrcvisnd.h
main/app/nes_emu/infones/: InfoNES.c  InfoNES.h  InfoNES_Mapper.c  InfoNES_pAPU.c
main/app/nes_emu/platform/: nes_core.c  nes_core.h
main/app/ocr/: ocr.c  ocr.h  ocr_album_ui.c  ocr_album_ui.h  ocr_ui.c  ocr_ui.h
main/app/photos/: photo_history.c  photo_history.h  photo_history_ui.c  photo_history_ui.h
main/app/wifi/: wifi_ui.c  wifi_ui.h
main/app/wrong_book/: wrong_book.c  wrong_book.h  wrong_book_ui.c  wrong_book_ui.h
main/bsp/battery/: battery.c  battery.h
main/bsp/camera/: camera.c  camera.h
main/bsp/lcd/: lcd.c  lcd.h
main/bsp/lvgl/: lvgl_port.c  lvgl_port.h
main/bsp/storage/: crash_log.c  crash_log.h  sd_card.c  sd_card.h  storage.c  storage.h
main/bsp/time/: sys_time.c  sys_time.h
main/bsp/touch/: touch.c  touch.h
main/bsp/web_server/: web_server.c  web_server.h
main/bsp/wifi/: c6_ota.c  c6_ota.h  wifi.c  wifi.h
main/common/: error_code.h  json_utils.c  json_utils.h  vision_types.h
main/fonts/: fontcn14.c  fontcn16.c
main/manager/: camera_manager.c  camera_manager.h  http_manager.c  http_manager.h  ui_manager.c  ui_manager.h
main/vision/: vision_core.c  vision_core.h  vision_ocr.c  vision_ocr.h  vision_ocr_parser.c  vision_ocr_parser.h
test/: touch_test.c
